--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ body, html {
 
 .parallax {
   /* The image used */
-  background-image: url('img_parallax.jpg');
+  background-image: url('https://media2.giphy.com/media/3oEjHZMFYibQnjvTq0/200.gif');
 
   /* Full height */
   height: 100%; 
