--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ body, html {
 
 .parallax {
   /* The image used */
-  background-image: url('/200.gif');
+  background-image: url("/200.gif");
 
   /* Full height */
   height: 100%; 
