--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ body, html {
 
 .parallax {
   /* The image used */
-  background-image: url("/200.gif");
+  background-image: url("https://cdn.mos.cms.futurecdn.net/jbCNvTM4gwr2qV8X8fW3ZB-1200-80.png");
 
   /* Full height */
   height: 100%; 
