--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body, html {
 </head>
 <body>
 
-<p style="text-align: center;">Welcome to my website.</p>
+<p style="text-align: center; size:100px;">Welcome to my website.</p>
 
 
 <div class="parallax"></div>
