--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 <style>
 body, html {
   height: 100%;
+background-color:#942b88
+
 }
 
 .parallax {
   /* The image used */
-  background-image: url("https://steamuserimages-a.akamaihd.net/ugc/2438013375536940927/D370DBF7BFC83ED36F783F08A598FFF3E71A1D61/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false");
+  background-image: url("https://cdn.mos.cms.futurecdn.net/jbCNvTM4gwr2qV8X8fW3ZB-1200-80.png");
 
   /* Full height */
   height: 100%; 
@@ -29,21 +31,23 @@ body, html {
 }
 </style>
 </head>
-<body>
-
-<p style="text-align: center; size:100px;">Welcome to my website.</p>
+  <body>
 
 
-<div class="parallax"></div>
+
+
+<div class="parallax" style="height: 400px"><p style="text-align: center; font-size:50px;">Welcome to my website.</p></div>
 
 <div style="text-align:center;">
 <h1> Pharaoh Match Game <a href="/Pharaoh-Match-Game">Here.</a></h1>
 </div>
-<div class="parallax"></div>
+<div class="parallax" style="height:200px"></div>
 <div style="text-align:center;">
 <h1> Christmas game <a href="https://github.com/feriousdesteny/christmas-game/releases/tag/release-1.0">Here.</a></h1>
 </div>
-<div class="parallax"></div>
+<div class="parallax" style="height:100px"></div>
 
-</body>
+
+
+<div id="mouseposition-extension-element-full-container" style="position: fixed; inset: 0px; pointer-events: none; z-index: 2147483647; font-weight: 400;"><div id="mouseposition-extension-element-rect-display" style="display: none; position: absolute; background: rgba(255, 255, 255, 0.7); outline: black solid 1px; font-size: 12px; z-index: 2147483647; justify-content: center; align-items: center; user-select: none; cursor: default; color: rgb(0, 0, 0); font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; width: 0px; height: 0px;"><pre style="flex: 1 1 0%; text-align: center; background-color: rgba(255, 255, 255, 0.7); color: rgb(0, 0, 0); min-width: 42px; min-height: 12px; transition: all 1s ease 0s;"></pre></div><pre id="mouseposition-extension-element-coordinate-display" style="position: absolute; display: none; background: rgb(255, 255, 255); font-size: 12px; line-height: 14px; border-radius: 3px; border-width: 1px; border-color: rgb(34, 34, 34) black rgb(51, 51, 51); border-style: solid; padding: 3px; z-index: 2147483647; color: rgb(34, 34, 34); user-select: none; cursor: default; font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;"></pre></div></body>
 </html>
