--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ background-color:#942b88
 
 .parallax {
   /* The image used */
-  background-image: url("https://cdn.mos.cms.futurecdn.net/jbCNvTM4gwr2qV8X8fW3ZB-1200-80.png");
+  background-image: url("https://steamuserimages-a.akamaihd.net/ugc/2438013375536940927/D370DBF7BFC83ED36F783F08A598FFF3E71A1D61/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false");
 
   /* Full height */
   height: 100%; 
