--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 body, html {
   height: 100%;
-background-color:#942b88
+background-color:#5586c9
 
 }
 
@@ -36,7 +36,7 @@ background-color:#942b88
 
 
 
-<div class="parallax" style="height: 400px"><p style="text-align: center; font-size:50px;">Welcome to my website.</p></div>
+<div class="parallax" style="height: 400px"><p style="text-align: center; font-size:50px;color:white;">Welcome to my website.</p></div>
 
 <div style="text-align:center;">
 <h1> Pharaoh Match Game <a href="/Pharaoh-Match-Game">Here.</a></h1>
