--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-g<head>
+<head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body, html {
@@ -57,18 +57,6 @@ color: white
 </body>
   <body class="parallax color:white">
 
-
-
-
-<div class="parallax" style="height: 300px"><p style="text-align: center; font-size:50px;color:white;">Welcome to my website.</p></div>
-
-<div style="text-align:center;color:white">
-<h1> Pharaoh Match Game <a href="/Pharaoh-Match-Game">Here.</a></h1>
-</div>
-<div class="parallax" style="height:100px"></div>
-<div style="text-align:center;color:white">
-<h1> Christmas game <a href="https://github.com/feriousdesteny/christmas-game/releases/tag/release-1.0">Here.</a></h1>
-</div>
 
 
 
