--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ color: white
 
 
 
-<div class="parallax" style="height: 300px"><p style="text-align: center; font-size:50px;color:white;">Welcome to my website.</p></div>
+<div class="parallax" style="height: 300px"><p style="text-align: center; font-size:50px;color:white;">Welcome to my website.</p><p style="text-align:center">I am a dude who is kinda good at coding and has fun doing it.<br> I usually use HTML, CSS, and JS, but I know a bit of python and lua.</div>
 
 <div style="text-align:center;color:white">
 <h1> Pharaoh Match Game <a href="/Pharaoh-Match-Game">Here.</a></h1>
