--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@ color:white;
 .parallax {
   color: #fff;
   text-align: center;
+  animation: glow 1s ease-in-out infinite alternate;
 }
-
 @-webkit-keyframes glow {
-
+  from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #5586c9, 0 0 40px #5586c9, 0 0 50px #5586c9, 0 0 60px #5586c9, 0 0 70px #5586c9;
+  }
   
-
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #5586c9, 0 0 40px #5586c9, 0 0 50px #5586c9, 0 0 60px #5586c9, 0 0 70px #5586c9, 0 0 80px #5586c9;
+  }
 }
 .parallax {
   /* The image used */
