--- a/index.html
+++ b/index.html
@@ -9,7 +9,29 @@ body, html {
   height: 100%;
 background-color:#5586c9
 color:white;
+.topnav {
+  overflow: hidden;
+  background-color: #5586c9;
+}
 
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #942b88;
+  color: white;
+}
 }
 .parallax {
   color: #fff;
@@ -42,7 +64,12 @@ color: white
 }
 </style>
 </head><body class="parallax color:white">
-
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
 
 
 
