--- a/index.html
+++ b/index.html
@@ -9,28 +9,34 @@ body, html {
   height: 100%;
 background-color:#5586c9
 color:white;
-.topnav {
-  overflow: hidden;
-  background-color: #5586c9;
+
+.sidenav {
+  width: 130px;
+  position: fixed;
+  z-index: 1;
+  top: 20px;
+  left: 10px;
+  background: #eee;
+  overflow-x: hidden;
+  padding: 8px 0;
 }
 
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
+.sidenav a {
+  padding: 6px 8px 6px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 25px;
+  color: #2196F3;
+  display: block;
 }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+.sidenav a:hover {
+  color: #064579;
 }
 
-.topnav a.active {
-  background-color: #942b88;
-  color: white;
+.main {
+  margin-left: 140px; /* Same width as the sidebar + left position in px */
+  font-size: 28px; /* Increased text to enable scrolling */
+  padding: 0px 10px;
 }
 }
 .parallax {
@@ -64,11 +70,10 @@ color: white
 }
 </style>
 </head><body class="parallax color:white">
-<div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+<div class="sidenav">
+  <a href="#">Home</a>
+  <a href="/Pharaoh-Match-Game">Pharaoh Match</a>
+  <a href="https://github.com/feriousdesteny/christmas-game/releases/tag/release-1.0">Christmas Game</a>
 </div>
 
 
