--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@ a {
 color: white
 }
 </style>
-</head><body class="parallax color:white">
+</head><body class="parallax color:white"style="font-size:30px;">
 <div class="sidenav">
-  <a href="#">Home</a>
+  <a href="#" style="color:blue">Home</a>
   <a href="/Pharaoh-Match-Game">Pharaoh Match</a>
   <a href="https://github.com/feriousdesteny/christmas-game/releases/tag/release-1.0">Christmas Game</a>
 </div>
