--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@ color: white
 <div class="sidenav">
   <a href="#" style="color:blue">Home</a>
   <a href="/Pharaoh-Match-Game">Pharaoh Match</a>
-  <a href="https://github.com/feriousdesteny/christmas-game/releases/tag/release-1.0">Christmas Game</a>
+  <a href="https://feriousdesteny.github.io/christmas-game/">Christmas Game</a>
+    <a href="https://github.com/feriousdesteny">Source code for everything"</a>
 </div>
 
 
