--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ color: white
   <a href="#" style="color:blue">Home</a>
   <a href="/Pharaoh-Match-Game">Pharaoh Match</a>
   <a href="https://feriousdesteny.github.io/christmas-game/">Christmas Game</a>
-    <a href="https://github.com/feriousdesteny">Source code for everything"</a>
+    <a href="https://github.com/feriousdesteny">Src Code</a>
 </div>
 
 
@@ -87,6 +87,7 @@ color: white
 <div class="parallax" style="height:100px"></div>
 <div style="text-align:center;color:white">
 <h1> Christmas game <a href="https://github.com/feriousdesteny/christmas-game/releases/tag/release-1.0">Here.</a></h1>
+<h1> Source Code for everything <a href="https://github.com/feriousdesteny">Here.</a></h1>
 </div>
 
 
