--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@ color: white
 </div>
 <div class="parallax" style="height:100px"></div>
 <div style="text-align:center;color:white">
-<h1> Christmas game <a href="https://github.com/feriousdesteny/christmas-game/releases/tag/release-1.0">Here.</a></h1>
+<h1> Christmas game <a href="https://github.com/feriousdesteny/christmas-game/releases/tag/release-1.0">Here.</a></h1></div>
+    <div style="text-align:center;color:white">
 <h1> Source Code for everything <a href="https://github.com/feriousdesteny">Here.</a></h1>
 </div>
 
