--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ color:white;
 
 .parallax {
   /* The image used */
-  background-image: url("https://steamuserimages-a.akamaihd.net/ugc/2438013375536940927/D370DBF7BFC83ED36F783F08A598FFF3E71A1D61/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false");
+  background-image: url("https://64.media.tumblr.com/d944663302024782e84c51d23aeb8744/a765828b12c2aa86-91/s1280x1920/9f55eb8c5b80e1c87eb057857eaa0175c350d540.gif");
 
   /* Full height */
   height: 100%; 
