--- a/index.html
+++ b/index.html
@@ -49,21 +49,14 @@ color:white;
   /* The image used */
   background-image: url("https://64.media.tumblr.com/d944663302024782e84c51d23aeb8744/a765828b12c2aa86-91/s1280x1920/9f55eb8c5b80e1c87eb057857eaa0175c350d540.gif");
 
-  /* Full height */
-  height: 100%; 
+  /* Set a specific height */
+  min-height: 500px; 
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
-
-/* Turn off parallax scrolling for tablets and phones. Increase the pixels if needed */
-@media only screen and (max-device-width: 1366px) {
-  .parallax {
-    background-attachment: scroll;
-  }
 }
 a {
 color: white
