--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <style>
 body, html {
   height: 100%;
-background-color:#5586c9
+background-color:#5586c9;
 color:white;
-
+    font-family: 'Quicksand', sans-serif;
+}
 .sidenav {
   width: 130px;
   position: fixed;
